<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:padding="15dp"
    android:id="@+id/parent_recycler_layout"
    android:layout_margin="10dp"
    android:background="@drawable/alarm_cell_rounded_edges"
    >
    <TextView
        android:id="@+id/alarm_time_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarmTime"
        android:textSize="18pt"/>

    <Switch
        android:id="@+id/alarm_armed_switch"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@id/alarm_time_display"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"/>

    <LinearLayout
        android:id="@+id/armedDaysOfTheWeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/alarm_time_display"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:gravity="left"
        android:orientation="horizontal">

        <Button
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="7dp"
            android:background="#0000"
            android:text="@string/sundayAbbreviation"
            android:textSize="5pt"
            android:id="@+id/sunday_button"
            android:onClick="onClickDayOfTheWeek"/>

        <Button
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="7dp"
            android:background="#0000"
            android:text="@string/mondayAbbreviation"
            android:textSize="5pt"
            android:id="@+id/monday_button"
            android:onClick="onClickDayOfTheWeek"/>

        <Button
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="7dp"
            android:background="#0000"
            android:text="@string/tuesdayAbbreviation"
            android:textSize="5pt"
            android:id="@+id/tuesday_button"
            android:onClick="onClickDayOfTheWeek"/>

        <Button
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="7dp"
            android:background="#0000"
            android:text="@string/wednesdayAbbreviation"
            android:textSize="5pt"
            android:id="@+id/wednesday_button"
            android:onClick="onClickDayOfTheWeek"/>

        <Button
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="7dp"
            android:background="#0000"
            android:text="@string/thursdayAbbreviation"
            android:textSize="5pt"
            android:id="@+id/thursday_button"
            android:onClick="onClickDayOfTheWeek"/>

        <Button
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="7dp"
            android:background="#0000"
            android:text="@string/fridayAbbreviation"
            android:textSize="5pt"
            android:id="@+id/friday_button"
            android:onClick="onClickDayOfTheWeek"/>

        <Button
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="7dp"
            android:background="#0000"
            android:text="@string/saturdayAbbreviation"
            android:textSize="5pt"
            android:id="@+id/saturday_button"
            android:onClick="onClickDayOfTheWeek"/>

    </LinearLayout>


</RelativeLayout>